# create_py_app

./: pyproject.toml  readme.md
src/create_py_app/: api_main_template.txt  api_router_template.txt  api_test_template.txt  command.py  configure_services_template.txt  coverage_rc_template.txt  env_template.txt  example_repo_template.txt  gitignore_template.txt  main_template.txt  pyproject_toml_template.txt  readme_template.txt  repo_pattern_template.txt  requirements_in_dev_template.txt  requirements_in_template.txt  scheduled_job_template.txt  settings_template.txt  tables_template.txt  test_example_template.txt  test_init_template.txt  user_interface_template.txt  vs_code_launch_json_template.txt  vs_code_settings_template.txt
src/create_py_app/pick/: __init__.py  curses_wrap.py  keycodes.py  picker.py
test/: test_scaffold.py
